fix footer and main gap

--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ main{
   overflow-y: auto;
   overflow-x: hidden;
   width: 100%;
-  padding: 197px 0;
+  padding: 197px 0 64px;
   background: #f7f8f9;
 }
 
